--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
-pids
-logs
 node_modules
-npm-debug.log
-coverage/
-run
 dist
-.DS_Store
-.nyc_output
-.basement
-config.local.js
-basement_dist
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
