--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "bootstrap": "^4.6.0"
-  }
+  },
+  "packageManager": "yarn@3.2.4"
 }
