--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
     "check": "vuepress check-md src"
   },
   "devDependencies": {
-    "@vuepress/plugin-register-components": "next",
-    "@vuepress/plugin-search": "next",
-    "rimraf": "^3.0.2",
-    "sass": "^1.56.1",
-    "sass-loader": "^13.2.0",
-    "vuepress": "next",
-    "vuepress-plugin-check-md": "^0.0.2"
+    "@vuepress/bundler-vite": "^2.0.0-rc.14",
+    "@vuepress/plugin-back-to-top": "^2.0.0-rc.40",
+    "@vuepress/plugin-medium-zoom": "^2.0.0-rc.40",
+    "@vuepress/plugin-nprogress": "^2.0.0-rc.40",
+    "@vuepress/plugin-register-components": "^2.0.0-rc.37",
+    "@vuepress/plugin-search": "^2.0.0-rc.40",
+    "@vuepress/theme-default": "^2.0.0-rc.40",
+    "rimraf": "^6.0.1",
+    "vuepress": "^2.0.0-rc.14",
+    "vuepress-plugin-check-md": "^0.0.3"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/vue-fontawesome": "latest-3",
-    "bootstrap": "^4.6.2"
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "bootstrap": "^5.3.3"
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@4.3.1"
 }
